backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    app: backend
