backend/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend
spec:
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
